<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_ESSMonitoringMCU5001a" Id="{dc25224c-2805-4e0c-98fe-daa6f852a4e2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ESSMonitoringMCU5001a
VAR_INPUT
    nEcMasterNetId: T_AmsNetId;
END_VAR
VAR_OUTPUT
    aErrorID: ARRAY [1..nMaxAlarms] OF INT;
    aErrorMsg: ARRAY [1..nMaxAlarms] OF STRING;
    nEcMasterFramesLost: UDINT;
    nCPULoad: UDINT;
    fCycleExecTime_ms: REAL;
    nAlarmGrpBitNumber: UDINT;
END_VAR
VAR
    //Outputs
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF208^DIG Outputs^Channel 1^Output'}
    bStatusLED AT %Q*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF207^DIG Outputs^Channel 4^Output'}
    bAcknowledgeLED AT %Q*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF208^DIG Outputs^Channel 2^Output'}
    bEStopLED AT %Q*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF208^DIG Outputs^Channel 4^Output'}
    bErrorLED AT %Q*: BOOL;

    //Inputs
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF204^Channel 1^Input'}
    b24VDC1_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF204^Channel 2^Input'}
    b24VDC2_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF204^Channel 3^Input'}
    b24VDC3_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF204^Channel 4^Input'}
    b48VDC1_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF204^Channel 5^Input'}
    b48VDC2_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF204^Channel 6^Input'}
    b48VDC3_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF204^Channel 7^Input'}
    b48VDC4_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF203^Channel 1^Input'}
    bFuse1_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF203^Channel 2^Input'}
    bFuse2_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF203^Channel 3^Input'}
    bFuse3_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF203^Channel 4^Input'}
    bFuse4_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF203^Channel 5^Input'}
    bFuse5_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF203^Channel 6^Input'}
    bFuse6_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF203^Channel 7^Input'}
    bFuse7_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF203^Channel 8^Input'}
    bFuse8_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF205^Channel 1^Input'}
    bEStop1Active AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF205^Channel 2^Input'}
    bSTO1Active AT %I*: BOOL;
    (*{attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^Term 1 (EK1100)^Term 5 (EL1808)^Channel 3^Input'}
    bEStop2Ok AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^Term 1 (EK1100)^Term 5 (EL1808)^Channel 4^Input'}
    bSTO2Ok AT %I*: BOOL;*)
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF206^Channel 2^Input'}
    bMCBFan_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF206^Channel 3^Input'}
    bSPD_OK AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF206^Channel 4^Input'}
    bDoorClosed AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF205^Channel 8^Input'}
    bAcknowledgeButton AT %I*: BOOL;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF209^RTD Inputs Channel 1^Value'}
    nTemp1 AT %I*: INT;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF209^RTD Inputs Channel 2^Value'}
    nTemp2 AT %I*: INT;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF209^RTD Inputs Channel 3^Value'}
    nTemp3 AT %I*: INT;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^KF201^KF209^RTD Inputs Channel 4^Value'}
    nTemp4 AT %I*: INT;
    {attribute 'TcLinkTo' := 'TIID^Device 2 (EtherCAT)^Inputs^DevState'}
    nEcMasterDevState AT %I*: UINT;

    aAlarmList: ARRAY [1..nMaxAlarms] OF ST_MonitoringAlarm := [
(*[1]*)(nErrorID:=241, sErrorMsg:='The DC OK Status from PS 24V-1 is OFF.', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[2]*)(nErrorID:=242, sErrorMsg:='The DC OK Status from PS 24V-2 is OFF.', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[3]*)(nErrorID:=243, sErrorMsg:='The DC OK Status from PS 24V-3 is OFF.', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[4]*)(nErrorID:=481, sErrorMsg:='The DC OK Status from PS 48V-1 is OFF.', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[5]*)(nErrorID:=482, sErrorMsg:='The DC OK Status from PS 48V-2 is OFF.', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[6]*)(nErrorID:=483, sErrorMsg:='The DC OK Status from PS 48V-3 is OFF.', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[7]*)(nErrorID:=484, sErrorMsg:='The DC OK Status from PS 48V-4 is OFF.', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[8]*)(nErrorID:=11, sErrorMsg:='MCB Fan OK status is OFF', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[9]*)(nErrorID:=12, sErrorMsg:='SPD OK status is OFF', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[10]*)(nErrorID:=13, sErrorMsg:='Cabinet door Opened', eStatusLED:=E_MonitorLed.eSteady, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eUndefined, bLedAutoReset:=TRUE),
(*[11]*)(nErrorID:=301, sErrorMsg:='Fuse 1 tripped', eStatusLED:=E_MonitorLed.eUndefined, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[12]*)(nErrorID:=302, sErrorMsg:='Fuse 2 tripped', eStatusLED:=E_MonitorLed.eSlow, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[13]*)(nErrorID:=303, sErrorMsg:='Fuse 3 tripped', eStatusLED:=E_MonitorLed.eSlow, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[14]*)(nErrorID:=304, sErrorMsg:='Fuse 4 tripped', eStatusLED:=E_MonitorLed.eSlow, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[15]*)(nErrorID:=305, sErrorMsg:='Fuse 5 tripped', eStatusLED:=E_MonitorLed.eSlow, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[16]*)(nErrorID:=306, sErrorMsg:='Fuse 6 tripped', eStatusLED:=E_MonitorLed.eSlow, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[17]*)(nErrorID:=307, sErrorMsg:='Fuse 7 tripped', eStatusLED:=E_MonitorLed.eSlow, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[18]*)(nErrorID:=308, sErrorMsg:='Fuse 8 tripped', eStatusLED:=E_MonitorLed.eSlow, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eSteady),
(*[19]*)(nErrorID:=501, sErrorMsg:='E-Stop 1 active', eStatusLED:=E_MonitorLed.eSteady, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eUndefined, eEStopLED:=E_MonitorLed.eSteady, bLedAutoReset:=TRUE),
(*[20]*)(nErrorID:=511, sErrorMsg:='STO axis 1 active', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eUndefined, bLedAutoReset:=TRUE),
(*[21]*)(nErrorID:=502, sErrorMsg:='E-Stop 2 active', eStatusLED:=E_MonitorLed.eSteady, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eUndefined, eEStopLED:=E_MonitorLed.eSteady, bLedAutoReset:=TRUE),
(*[22]*)(nErrorID:=512, sErrorMsg:='STO axis 2 active', eStatusLED:=E_MonitorLed.eFast, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eUndefined, bLedAutoReset:=TRUE),
(*[23]*)(nErrorID:=14, sErrorMsg:='Temperature 1 too high', eStatusLED:=E_MonitorLed.eUndefined, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eUndefined),
(*[24]*)(nErrorID:=15, sErrorMsg:='Temperature 2 too high', eStatusLED:=E_MonitorLed.eUndefined, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eUndefined),
(*[25]*)(nErrorID:=16, sErrorMsg:='Temperature 3 too high', eStatusLED:=E_MonitorLed.eUndefined, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eUndefined),
(*[26]*)(nErrorID:=17, sErrorMsg:='Temperature 4 too high', eStatusLED:=E_MonitorLed.eUndefined, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eUndefined),
(*[27]*)(nErrorID:=101, sErrorMsg:='EtherCAT Master is not ok', eStatusLED:=E_MonitorLed.eSteady, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eUndefined),
(*[28]*)(nErrorID:=102, sErrorMsg:='At least one EtherCAT slave is not in OP state', eStatusLED:=E_MonitorLed.eSteady, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eUndefined),
(*[29]*)(nErrorID:=103, sErrorMsg:='At least one EtherCAT slave link is faulted', eStatusLED:=E_MonitorLed.eSteady, eErrorLED:=E_MonitorLed.eSteady, eAcknowledgeLED:=E_MonitorLed.eUndefined),
(*[30]*)(nErrorID:=104, sErrorMsg:='Overflow in PLC cycle time', eStatusLED:=E_MonitorLed.eSteady, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eUndefined),
(*[31]*)(nErrorID:=105, sErrorMsg:='CPU Load High', eStatusLED:=E_MonitorLed.eSteady, eErrorLED:=E_MonitorLed.eUndefined, eAcknowledgeLED:=E_MonitorLed.eUndefined)];

    aTempErrorID: ARRAY [1..nMaxAlarms] OF INT;
    aTempErrorMsg: ARRAY [1..nMaxAlarms] OF STRING;

    nAlarmCnt: INT;
    nAlarmBitNumber: UDINT;

    bCPUOverloaded: BOOL;
    bEcMasterError: BOOL;
    bSlaveStateNotOP: BOOL;
    bSlaveLinkError: BOOL;
    aExtraMessage: ARRAY[1..nMaxAlarms] OF STRING := [nMaxAlarms('')];
    bCycleTimeExceeded: BOOL;

    //Ethercat master device state
    bEcLinkError: BOOL;
    bEcIOlocked: BOOL;
    bEcLinkErrorRedundancyAdapter: BOOL;
    bEcMissingFrame: BOOL;
    bEcOutofSendResources: BOOL;
    bEcWatchdogTriggered: BOOL;
    bEcEthernetDriverNotFound: BOOL;
    bEcIOresetActive: BOOL;
    bEcSlaveINIT: BOOL;
    bEcSlavePreOP: BOOL;
    bEcSlaveSafeOP: BOOL;
    bEcSlaveError: BOOL;
    bEcDCnotInSync: BOOL;

    nAcknowledgeLED: E_MonitorLed;
    nStatusLED: E_MonitorLed;
    nAbnormalLED: E_MonitorLed;
    nEmergencyLED: E_MonitorLed;

    fbAcknowledgeButtonTrig: R_TRIG;

END_VAR

VAR CONSTANT
    nMaxAlarms: UINT := 50;
    nMaxECSlaves: INT := 255;
    nMaxTemp: INT := 10000;
    nSlaveStateNotOPEntry: UDINT := 28;
    nSlaveLinkErrorEntry: UDINT := 29;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[mMonitorAlarms();
mMonitorCPU();
mMonitorEtherCAT();
]]></ST>
    </Implementation>
    <Method Name="mAlarm" Id="{bc357e09-9ee8-4234-8c76-7cdeb0e72989}">
      <Declaration><![CDATA[METHOD mAlarm
VAR_IN_OUT
    stAlarmData: ST_MonitoringAlarm;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF stAlarmData.bAlarmSet THEN
    stAlarmData.bAlarmActive := TRUE;
ELSIF stAlarmData.bAlarmReset THEN
    stAlarmData.bAlarmActive := FALSE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="mAlarmActive" Id="{aff05498-00f1-0703-1f58-de4c9fc3cb2d}">
      <Declaration><![CDATA[METHOD mAlarmActive
VAR_INPUT
    i: UINT;
    bUpdatedExtraMessage : BOOL;
END_VAR

VAR_INST
    aFbErrorMessageTimer: ARRAY[1..nMaxAlarms] OF TON;
    tNewMessageTimeout: TIME := T#60S;
    aStartErrorMsgTimer: ARRAY[1..nMaxAlarms] OF BOOL;
    aFbErrorTrig: ARRAY[1..nMaxAlarms] OF R_TRIG;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Update timer and trigger for new log message
aStartErrorMsgTimer[i] :=
    aAlarmList[i].bAlarmActive
    AND NOT aFbErrorMessageTimer[i].Q;
aFbErrorMessageTimer[i](
    IN:=aStartErrorMsgTimer[i],
    PT:=tNewMessageTimeout);
aFbErrorTrig[i](
    CLK:=aStartErrorMsgTimer[i]);

IF NOT aAlarmList[i].bAlarmActive THEN
    RETURN;
END_IF

nAlarmCnt := nAlarmCnt + 1;
aTempErrorID[nAlarmCnt] := aAlarmList[i].nErrorID;
aTempErrorMsg[nAlarmCnt] := CONCAT(aAlarmList[i].sErrorMsg, aExtraMessage[i]);

mPrintErrorMessage(
    bPrintLog:=aFbErrorTrig[i].Q OR bUpdatedExtraMessage,
    sErrorMessage:=aTempErrorMsg[nAlarmCnt],
    nErrorID:=aAlarmList[i].nErrorID,
    nIndex:=i);

// Map nErrorID to nAlarmBitnumber, which later is mapped to output variable nAlarmGrpBitNumber.
CASE aAlarmList[i].nErrorID OF
    241, 242, 243:
    nAlarmBitNumber.0 := TRUE;
    481, 482, 483, 484:
    nAlarmBitNumber.1 := TRUE;
    11:
    nAlarmBitNumber.2 := TRUE;
    12:
    nAlarmBitNumber.3 := TRUE;
    13:
    nAlarmBitNumber.4 := TRUE;
    14,15,16,17:
    nAlarmBitNumber.5 := TRUE;
    301, 302, 303, 304, 305, 306, 307, 308:
    nAlarmBitNumber.6 := TRUE;
    501, 502, 511, 512:
    nAlarmBitNumber.7 := TRUE;
    101:
    nAlarmBitNumber.8 := TRUE;
    102:
    nAlarmBitNumber.9 := TRUE;
    103:
    nAlarmBitNumber.10 := TRUE;
    104, 105:
    nAlarmBitNumber.11 := TRUE;
END_CASE
]]></ST>
      </Implementation>
    </Method>
    <Method Name="mLed" Id="{e7c0d21c-5d75-0ad9-14e4-781003dce579}">
      <Declaration><![CDATA[METHOD mLed
VAR_IN_OUT
    stAlarmData: ST_MonitoringAlarm;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF stAlarmData.bLedSet THEN
    stAlarmData.bLedActive := TRUE;
ELSIF stAlarmData.bLedReset THEN
    stAlarmData.bLedActive := FALSE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="mMonitorAlarms" Id="{542f94fc-2447-0df7-2067-48b1bdc9c1ba}">
      <Declaration><![CDATA[METHOD mMonitorAlarms
VAR
    i: UINT := 0;
END_VAR

VAR_INST
    aExtraMessageOld: ARRAY[1..nMaxAlarms] OF STRING := [nMaxAlarms('')];
    bLedActive: BOOL := FALSE;
    fbFastBlinkOn: TON;
    fbFastBlinkOff: TON;
    fbSlowBlinkOn: TON;
    fbSlowBlinkOff: TON;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbAcknowledgeButtonTrig(CLK:=bAcknowledgeButton);
mSetResetAlarmsLeds();

// Reset before loop
nAlarmCnt := 0;
nAlarmBitNumber := 0;
MEMSET(ADR(aTempErrorID), 0, SIZEOF(aTempErrorID));
MEMSET(ADR(aTempErrorMsg), 0, SIZEOF(aTempErrorMsg));
bLedActive := FALSE;
nEmergencyLED := 0;
nAbnormalLED := 0;
nStatusLED := 0;
nAcknowledgeLED := 0;

FOR i:=1 TO nMaxAlarms DO
    // Update list of active alarms
    mAlarm(stAlarmData:=aAlarmList[i]);
    // Update list of active LEDs
    mLed(stAlarmData:=aAlarmList[i]);
    // Handle log prints, alarm bits and prepare alarm LEDs
    mAlarmActive(i:=i, bUpdatedExtraMessage := aExtraMessage[i] <> aExtraMessageOld[i]);

    // Set the alarm LEDs according to first occurrence
    IF NOT bLedActive
        AND aAlarmList[i].bLedActive THEN
        bLedActive := TRUE;
        nEmergencyLED := aAlarmList[i].eErrorLED;
        nAbnormalLED := aAlarmList[i].nAbnormalLED;
        nStatusLED := aAlarmList[i].eStatusLED;
        nAcknowledgeLED := aAlarmList[i].eAcknowledgeLED;
    END_IF
END_FOR

// Save last messages for next iteration
aExtraMessageOld := aExtraMessage;

// Copy to output variables
aErrorID := aTempErrorID;
aErrorMsg := aTempErrorMsg;
nAlarmGrpBitNumber := nAlarmBitNumber;

// Handle LED blinking
fbFastBlinkOn(IN:=NOT fbFastBlinkOff.Q, PT:=T#250MS);
fbFastBlinkOff(IN:=fbFastBlinkOn.Q, PT:=T#250MS);

fbSlowBlinkOn(IN:=NOT fbSlowBlinkOff.Q, PT:=T#750MS);
fbSlowBlinkOff(IN:=fbSlowBlinkOn.Q, PT:=T#750MS);

bErrorLED :=
    (nEmergencyLED = E_MonitorLed.eSteady)
    OR (nEmergencyLED = E_MonitorLed.eFast AND fbFastBlinkOn.Q)
    OR (nEmergencyLED = E_MonitorLed.eSlow AND fbSlowBlinkOn.Q);
bAbnormalLED :=
    (nAbnormalLED = E_MonitorLed.eSteady)
    OR (nAbnormalLED = E_MonitorLed.eFast AND fbFastBlinkOn.Q)
    OR (nAbnormalLED = E_MonitorLed.eSlow AND fbSlowBlinkOn.Q);
bStatusLED :=
    (nStatusLED = E_MonitorLed.eSteady)
    OR (nStatusLED = E_MonitorLed.eFast AND fbFastBlinkOn.Q)
    OR (nStatusLED = E_MonitorLed.eSlow AND fbSlowBlinkOn.Q);
bAcknowledgeLED :=
    (nAcknowledgeLED = E_MonitorLed.eSteady)
    OR (nAcknowledgeLED = E_MonitorLed.eFast AND fbFastBlinkOn.Q)
    OR (nAcknowledgeLED = E_MonitorLed.eSlow AND fbSlowBlinkOn.Q);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="mMonitorCPU" Id="{a61c27e8-4c84-0867-118e-ec0a5a4d454e}">
      <Declaration><![CDATA[METHOD mMonitorCPU

VAR_INST
    fbMonitorCPU: TC_CpuUsage;
    fbUpdateCPULoadTON: TON;
    fMaxCPULoad: USINT := 85;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Cpu Monitor
fbUpdateCPULoadTON(IN:=NOT fbUpdateCPULoadTON.q , PT:=T#100MS , Q=> , ET=> );
fbMonitorCPU(START:=fbUpdateCPULoadTON.q, TMOUT:= T#5S);

bCPUOverloaded := fbMonitorCPU.USAGE > fMaxCPULoad;
nCPULoad := fbMonitorCPU.USAGE;

fCycleExecTime_ms := UDINT_TO_REAL(_TaskInfo[fbGetCurTaskIndex.index].LastExecTime) / 10000;
bCycleTimeExceeded := _TaskInfo[fbGetCurTaskIndex.index].CycleTimeExceeded;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="mMonitorEtherCAT" Id="{27ca7522-14a9-0d7c-33ae-0dd2d861dfe1}">
      <Declaration><![CDATA[METHOD mMonitorEtherCAT
VAR
    i: UINT := 0;
END_VAR

VAR_INST
    fbUpdateEcSlaveStateTON: TON;
    fbGetEcSlaveStates: FB_EcGetAllSlaveStates;
    stSlaveState: ARRAY[0..nMaxECSlaves] OF ST_EcSlaveState;
    nActualEcSlaves: UINT := 0;

    //Frame statistics
    fbUpdateEcMasterFrame: TON;
    fbGetEcMasterFrames: FB_EcMasterFrameStatistic;

    fbEtherCATAlarmDelayTON: TON;
    bStartEtherCATdelayTON: BOOL := FALSE;
    bEtherCATInitialized: BOOL := FALSE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Read frames
fbUpdateEcMasterFrame(IN:=NOT fbUpdateEcMasterFrame.q, PT:=T#1000MS);
fbGetEcMasterFrames(sNetId:= nEcMasterNetId, bExecute:= fbUpdateEcMasterFrame.q);

nEcMasterFramesLost := fbGetEcMasterFrames.nLostFrames;


//Check ethercat master device state
bEcLinkError := nEcMasterDevState.0;
bEcIOlocked := nEcMasterDevState.1;
bEcLinkErrorRedundancyAdapter := nEcMasterDevState.2;
bEcMissingFrame := nEcMasterDevState.3;
bEcOutofSendResources := nEcMasterDevState.4;
bEcWatchdogTriggered := nEcMasterDevState.5;
bEcEthernetDriverNotFound := nEcMasterDevState.6;
bEcIOresetActive := nEcMasterDevState.7;
bEcSlaveINIT := nEcMasterDevState.8;
bEcSlavePreOP := nEcMasterDevState.9;
bEcSlaveSafeOP := nEcMasterDevState.10;
bEcSlaveError := nEcMasterDevState.11;
bEcDCnotInSync := nEcMasterDevState.12;

bEcMasterError := nEcMasterDevState > 0;


//Check ethercat slave device state
fbUpdateEcSlaveStateTON(IN:=NOT fbUpdateEcSlaveStateTON.q, PT:=T#100MS);
fbGetEcSlaveStates(
    sNetId:=nEcMasterNetId,
    pStateBuf:=ADR(stSlaveState),
    cbBufLen:=SIZEOF(stSlaveState),
    bExecute:=fbUpdateEcSlaveStateTON.q);
nActualEcSlaves:=fbGetEcSlaveStates.nSlaves;

fbEtherCATAlarmDelayTON(IN:=bStartEtherCATdelayTON, PT:=T#1S);
IF fbEtherCATAlarmDelayTON.Q THEN
    bStartEtherCATdelayTON := FALSE;
    bEtherCATInitialized := TRUE;
END_IF

IF NOT bEtherCATInitialized THEN
    bStartEtherCATdelayTON := TRUE;
    RETURN;
END_IF

// After startup timeout, reset variables before loop
bSlaveStateNotOP := FALSE;
bSlaveLinkError := FALSE;
aExtraMessage[nSlaveStateNotOPEntry] := ', Slave Id #: ';
aExtraMessage[nSlaveLinkErrorEntry] := ', Slave Id #: ';

FOR i:=0 TO nActualEcSlaves-1 DO
    IF stSlaveState[i].linkState <> EC_LINK_STATE_OK  THEN
        bSlaveLinkError := TRUE;
        aExtraMessage[nSlaveLinkErrorEntry] :=
            CONCAT(STR1:=aExtraMessage[nSlaveLinkErrorEntry], STR2:=UINT_TO_STRING(i+1));
        aExtraMessage[nSlaveLinkErrorEntry] :=
            CONCAT(STR1:=aExtraMessage[nSlaveLinkErrorEntry], STR2:=', ');
        // Do not print slave numbers for deviceState if already printed for linkState
        CONTINUE;
    END_IF

    IF stSlaveState[i].deviceState <> EC_DEVICE_STATE_OP THEN
        bSlaveStateNotOP := TRUE;
        aExtraMessage[nSlaveStateNotOPEntry] :=
            CONCAT(STR1:=aExtraMessage[nSlaveStateNotOPEntry], STR2:= UINT_TO_STRING(i+1));
        aExtraMessage[nSlaveStateNotOPEntry] :=
            CONCAT(STR1:=aExtraMessage[nSlaveStateNotOPEntry], STR2:=', ');
    END_IF
END_FOR
]]></ST>
      </Implementation>
    </Method>
    <Method Name="mPrintErrorMessage" Id="{3e321397-22af-4d7e-a9bd-c132b0a3b842}">
      <Declaration><![CDATA[METHOD mPrintErrorMessage
VAR_INPUT
    bPrintLog : BOOL;
    sErrorMessage: STRING;
    nErrorID: INT;
    nIndex: UINT;
END_VAR
VAR
    sErrorId: STRING;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bPrintLog THEN
    RETURN;
END_IF

sErrorId := CONCAT(STR1:='ErrorID: ', STR2:=INT_TO_STRING(nErrorID));
sErrorId := CONCAT(STR1:=sErrorId, STR2:='. %s');

ADSLOGSTR(
    msgCtrlMask:=ADSLOG_MSGTYPE_ERROR,
    msgFmtStr:=sErrorId,
    strArg:=sErrorMessage);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="mSetReset" Id="{bc20beb2-4ad1-01ee-3c55-7ebdd0373966}">
      <Declaration><![CDATA[METHOD mSetReset
VAR_INPUT
    bOk: BOOL;
END_VAR

VAR_IN_OUT
    stAlarmList: ST_MonitoringAlarm;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bOk THEN
    stAlarmList.bAlarmSet := TRUE;
    stAlarmList.bAlarmReset := FALSE;
    stAlarmList.bLedSet := TRUE;
    stAlarmList.bLedReset := FALSE;
    RETURN;
END_IF

stAlarmList.bAlarmSet := FALSE;
stAlarmList.bAlarmReset := TRUE;

IF stAlarmList.bLedAutoReset THEN
    stAlarmList.bLedSet := FALSE;
    stAlarmList.bLedReset := TRUE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="mSetResetAlarmsLeds" Id="{1241012c-ae73-450a-94a3-e603ad15f437}">
      <Declaration><![CDATA[METHOD mSetResetAlarmsLeds
VAR_INST
    index: UINT;
    aDeadBandActive: ARRAY [1..4] OF BOOL;
    nDeadBandTemperature: INT := 3;
    aTemperatureAlarm: ARRAY [1..4] OF BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[mSetReset(stAlarmList := aAlarmList[1], bOk := b24VDC1_OK);
mSetReset(stAlarmList := aAlarmList[2], bOk := b24VDC2_OK);
mSetReset(stAlarmList := aAlarmList[3], bOk := b24VDC3_OK);

mSetReset(stAlarmList := aAlarmList[4], bOk := b48VDC1_OK);
mSetReset(stAlarmList := aAlarmList[5], bOk := b48VDC2_OK);
mSetReset(stAlarmList := aAlarmList[6], bOk := b48VDC3_OK);
mSetReset(stAlarmList := aAlarmList[7], bOk := b48VDC4_OK);

mSetReset(stAlarmList := aAlarmList[8], bOk := bMCB_OK);
mSetReset(stAlarmList := aAlarmList[9], bOk := bSPD_OK);
mSetReset(stAlarmList := aAlarmList[10], bOk := bDoorClosed);

mSetReset(stAlarmList := aAlarmList[11], bOk := bFuse1_OK);
mSetReset(stAlarmList := aAlarmList[12], bOk := NOT bFuse2_OK);
mSetReset(stAlarmList := aAlarmList[13], bOk := NOT bFuse3_OK);
mSetReset(stAlarmList := aAlarmList[14], bOk := bFuse4_OK);
mSetReset(stAlarmList := aAlarmList[15], bOk := bFuse5_OK);
mSetReset(stAlarmList := aAlarmList[16], bOk := bFuse6_OK);
mSetReset(stAlarmList := aAlarmList[17], bOk := bFuse7_OK);
mSetReset(stAlarmList := aAlarmList[18], bOk := bFuse8_OK);

mSetReset(stAlarmList := aAlarmList[19], bOk := bEStop1Ok);
mSetReset(stAlarmList := aAlarmList[20], bOk := bSTO1Ok);
mSetReset(stAlarmList := aAlarmList[21], bOk := bEStop2Ok);
mSetReset(stAlarmList := aAlarmList[22], bOk := bSTO2Ok);

mSetReset(stAlarmList := aAlarmList[27], bOk := NOT bEcMasterError);
mSetReset(stAlarmList := aAlarmList[28], bOk := NOT bSlaveStateNotOP);
mSetReset(stAlarmList := aAlarmList[29], bOk := NOT bSlaveLinkError);
mSetReset(stAlarmList := aAlarmList[30], bOk := NOT bCycleTimeExceeded);
mSetReset(stAlarmList := aAlarmList[31], bOk := NOT bCPUOverloaded);

aTemperatureAlarm[1] :=
    nTemp1 > nMaxTemp
    OR (aDeadBandActive[1] AND nTemp1 > (nMaxTemp - nDeadBandTemperature));
aDeadBandActive[1] := aTemperatureAlarm[1];
mSetReset(stAlarmList := aAlarmList[23], bOk := NOT aTemperatureAlarm[1]);

aTemperatureAlarm[2] :=
    nTemp2 > nMaxTemp
    OR (aDeadBandActive[2] AND nTemp2 > (nMaxTemp - nDeadBandTemperature));
aDeadBandActive[2] := aTemperatureAlarm[2];
mSetReset(stAlarmList := aAlarmList[24], bOk := NOT aTemperatureAlarm[2]);

aTemperatureAlarm[3] :=
    nTemp3 > nMaxTemp
    OR (aDeadBandActive[3] AND nTemp3 > (nMaxTemp - nDeadBandTemperature));
aDeadBandActive[3] := aTemperatureAlarm[3];
mSetReset(stAlarmList := aAlarmList[25], bOk := NOT aTemperatureAlarm[3]);

aTemperatureAlarm[4] :=
    nTemp4 > nMaxTemp
    OR (aDeadBandActive[4] AND nTemp4 > (nMaxTemp - nDeadBandTemperature));
aDeadBandActive[4] := aTemperatureAlarm[4];
mSetReset(stAlarmList := aAlarmList[26], bOk := NOT aTemperatureAlarm[4]);


//Reset selected alarms just when acknowledge button has been pressed
IF fbAcknowledgeButtonTrig.Q THEN
    FOR index:=1 TO nMaxAlarms DO
        aAlarmList[index].bAlarmSet := FALSE;
        aAlarmList[index].bAlarmReset := TRUE;
        aAlarmList[index].bLedSet := FALSE;
        aAlarmList[index].bLedReset := TRUE;
    END_FOR
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>